--- a/index.html
+++ b/index.html
@@ -3,52 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ricardo Consórcios e Vendas</title>
+  <title>Consórcios Silva</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; line-height: 1.6; }
-    header { background: #333; color: #fff; padding: 1rem; text-align: center; }
-    nav { text-align: center; padding: 0.5rem; background: #444; }
-    nav a { color: #fff; margin: 0 10px; text-decoration: none; }
-    section { padding: 2rem; }
-    footer { background: #333; color: #fff; text-align: center; padding: 1rem; }
-    .contact-form { max-width: 500px; margin: 0 auto; }
-    .contact-form input, .contact-form textarea { width: 100%; margin-bottom: 1rem; padding: 0.5rem; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      background: #f9f9f9;
+    }
+    #loading {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background: white;
+      z-index: 10;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.5rem;
+      color: #333;
+    }
+    header {
+      background: #333;
+      color: #fff;
+      padding: 1rem;
+    }
+    nav a {
+      margin: 0 10px;
+      color: #fff;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
+  <div id="loading">Carregando...</div>
+
   <header>
-    <h1>Ricardo Consórcios e Vendas</h1>
-    <p>Consórcios, veículos e imóveis para você!</p>
+    <h1>Consórcios Silva</h1>
+    <p id="welcome"></p>
   </header>
   <nav>
     <a href="#sobre">Sobre</a>
-    <a href="#anuncios">Anúncios</a>
+    <a href="#servicos">Serviços</a>
     <a href="#contato">Contato</a>
   </nav>
   <section id="sobre">
-    <h2>Sobre</h2>
-    <p>Trabalho com a venda de consórcios de carros, motos, imóveis e muito mais. Ofereço as melhores opções para facilitar o seu sonho.</p>
+    <h2>Sobre Nós</h2>
+    <p>Especialistas em consórcios de imóveis, veículos e muito mais.</p>
   </section>
-  <section id="anuncios">
-    <h2>Anúncios</h2>
+  <section id="servicos">
+    <h2>Serviços</h2>
     <ul>
-      <li>Consórcios de imóveis a partir de R$ 500/mês.</li>
-      <li>Consórcios de carros novos e seminovos.</li>
-      <li>Venda direta de veículos e imóveis.</li>
+      <li>Consórcios de imóveis</li>
+      <li>Consórcios de veículos</li>
+      <li>Financiamento personalizado</li>
     </ul>
   </section>
   <section id="contato">
     <h2>Contato</h2>
-    <p>Entre em contato para mais informações:</p>
-    <form class="contact-form" action="https://formspree.io/f/mnnqkwvp" method="POST">
-      <input type="text" name="nome" placeholder="Seu nome" required>
-      <input type="email" name="email" placeholder="Seu e-mail" required>
-      <textarea name="mensagem" rows="5" placeholder="Sua mensagem"></textarea>
-      <button type="submit">Enviar</button>
-    </form>
+    <p>Entre em contato conosco pelo formulário.</p>
   </section>
-  <footer>
-    <p>© 2025 Ricardo Consórcios e Vendas. Todos os direitos reservados.</p>
-  </footer>
+
+  <script>
+    // Remove a tela de carregamento após 2 segundos
+    window.addEventListener('load', function () {
+      const loadingScreen = document.getElementById('loading');
+      setTimeout(() => {
+        loadingScreen.style.display = 'none';
+      }, 2000);
+    });
+
+    // Adiciona mensagem de boas-vindas dinâmica
+    const welcome = document.getElementById('welcome');
+    const hour = new Date().getHours();
+    if (hour < 12) {
+      welcome.textContent = 'Bom dia! Confira as melhores ofertas de consórcios!';
+    } else if (hour < 18) {
+      welcome.textContent = 'Boa tarde! Temos ótimas condições para você.';
+    } else {
+      welcome.textContent = 'Boa noite! Não perca as oportunidades.';
+    }
+  </script>
 </body>
 </html>
